<resources>
    <string name="app_name">AndroidSprint01</string>
    <string name="favorites">Избранное</string>
    <string name="categories">Категории</string>
    <string name="content_description_button_favourites">Перейти в Избранное</string>
    <string name="content_description_button_categories">Перейти в Категории</string>
    <string name="content_description_image_categories">Изображение всех категорий</string>
    <string name="content_description_image_category">Изображение категории %1$s</string>
    <string name="content_description_image_recipe">Изображение рецепта %1$s</string>
    <string name="content_description_image_favorites">Изображение заголовка избранных рецептов</string>

    <string name="tv_heading_list_recipes">tv_heading_list_recipes</string>

    <string name="tv_ingredients">Ингредиенты</string>
    <string name="tv_cooking_method">Способ приготовления</string>
    <string name="ib_cd_favorites">Добавить в избранное</string>
    <string name="recipe">Рецепт</string>
    <string name="text_portions">Порции:</string>
    <string name="tv_0_favorites">Вы еще не добавили ни одного\nрецепта в избранное</string>
</resources>