<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fon_main"
    android:fitsSystemWindows="true">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="com.example.androidsprint01.ui.categories.CategoriesListFragment"
        app:defaultNavHost = "true"
        app:navGraph = "@navigation/nav_graph"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        app:layout_constraintBottom_toTopOf="@+id/container_categories_and_favorites"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_list_categories"
        />

    <LinearLayout
        android:id="@+id/container_categories_and_favorites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/indent_container_categories_and_favorites"
        android:layout_marginVertical="@dimen/half_indent_container_categories_and_favorites"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_categories"
            style="@style/StyleNavButton"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/fon_categories"
            android:contentDescription="@string/content_description_button_categories"
            android:text="@string/categories"
            android:textColor="@color/text_favorites_and_categories_and_fon_card" />

        <Button
            android:id="@+id/button_favorites"
            style="@style/StyleNavButton"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/indent_categories_favorites"
            android:layout_weight="1"
            android:backgroundTint="@color/fon_favorites"
            android:contentDescription="@string/content_description_button_favourites"
            android:text="@string/favorites"
            android:textColor="@color/text_favorites_and_categories_and_fon_card"
            app:icon="@drawable/ic_favourites"
            app:iconTint="@color/text_favorites_and_categories_and_fon_card"
            app:iconGravity="end" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>